--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -14,12 +14,12 @@
 
                     <!-- Nav -->
                     <nav id="nav">
-                        <a href="/game/trumpcard">트럼프 카드</a>
-                        <a href="/game/hwatu"> 화투</a>
-                        <a href="/game/boardgame">보드게임</a>
-                        <a href="/board/list">게시판</a>
-                        <a href="/user/register">회원가입</a>
-                        <a href="/user/login">로그인</a>
+                        <a th:href="@{/game/trumpcard}">트럼프 카드</a>
+                        <a th:href="@{/game/hwatu}"> 화투</a>
+                        <a th:href="@{/game/boardgame}">보드게임</a>
+                        <a th:href="@{/board/list}">게시판</a>
+                        <a th:href="@{/user/register}">회원가입</a>
+                        <a th:href="@{/user/login}">로그인</a>
                     </nav>
                 </div>
             </div>
