Making login js / html

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -44,7 +44,7 @@
                                     </div>
                                     <br/><br/><br/>
                                     <label class="m_label"></label>
-                                    <input class="m_submit m_active" type="submit" value="로그인" />
+                                    <input class="m_submit m_active" type="submit" id="btn_login" value="로그인"/>
                                     <br/><br/><br/><br/>
                                     <div class="div_link">
                                         <a href="#" class="text_link">ID 찾기</a>
@@ -64,7 +64,7 @@
     <div th:replace="fragments/footer :: footer"></div>
 
 </div>
-<script type="text/javascript" th:src="@{/js/user/register.js}"></script>
+<script type="text/javascript" th:src="@{/js/user/login.js}"></script>
 <link rel="stylesheet" type="text/css" th:href="@{/css/user/user.css}" />
 </body>
 </html>
