Updating login html

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -40,7 +40,7 @@
                                     <br/><br/><br/>
                                     <div class="keep_login">
                                         <input type="checkbox" id="keepLogin" class="inp_radio" name="keepLogin"/>
-                                        <label class="text_link">로그인 상태 유지</label>
+                                        <label class="keep_login_text">로그인 상태 유지</label>
                                     </div>
                                     <br/><br/><br/>
                                     <label class="m_label"></label>
